--- a/core/sh/templates/movements/create.html
+++ b/core/sh/templates/movements/create.html
@@ -151,15 +151,15 @@
           </div>
         </div>
         <div class="form-group row p-2">
-          <label for="id_date_in">Fecha del Movimiento: </label>
+          <label for="id_date">Fecha del Movimiento: </label>
           <div class="row col-12">
             <button type="button" id="id_movements_date_in_button" class="btn btn-dark mx-3">
               <i class="fa fa-calendar"></i> Seleccionar Fecha:
             </button>
-            <input type="text" name="date_in" id="id_movements_date_in_input" readonly value="{{ form.date_in.value | default_if_none:'' }}" class="form-control col-3">
-            {% if form.date_in.errors %}
+            <input type="text" name="date" id="id_movements_date_in_input" readonly value="{{ form.date.value | default_if_none:'' }}" class="form-control col-3">
+            {% if form.date.errors %}
               <div class="invalid-feedback d-block">
-                {{ form.date_in.errors|join:"<br>" }}
+                {{ form.date.errors|join:"<br>" }}
               </div>
               {% endif %}
           </div>
