--- a/core/sh/templates/dev_model/create.html
+++ b/core/sh/templates/dev_model/create.html
@@ -45,7 +45,7 @@
   <label for="id_image">Imagen: </label>
   <div>
     {{form.image}}
-    <button type="button" class="btn btn-primary" id="custom_file_button">
+    <button type="button" class="btn {{btn_color}}" id="custom_file_button">
       <i class="fas fa-upload"></i> Seleccionar Archivo
     </button>
     <span id="file_name" class="ml-2">Ningún archivo seleccionado</span>
