--- a/core/sh/templates/movements/modal_details.html
+++ b/core/sh/templates/movements/modal_details.html
@@ -72,8 +72,8 @@
                                         <i class="fas fa-box-open"></i> Insumo y Movimiento
                                     </div>
                                     <div class="card-body">
-                                        <p><strong>Movimiento:</strong> <span id="detail-move"></span></p>
-                                        <p><strong>Insumo Utilizado:</strong> <span id="detail-suply"></span></p>
+                                        <p><strong>MOVIMIENTO: </strong> {{movement.move}}</p>
+                                        <p><strong>INSUMO UTILIZADO: </strong> TIPO: {{movement.suply}}</p>
                                     </div>
                                 </div>
                             </div>
@@ -85,7 +85,7 @@
                                         <i class="fas fa-file-alt"></i> Detalle del Movimiento
                                     </div>
                                     <div class="card-body">
-                                        <p class="mb-0"><span id="detail-detail"></span></p>
+                                        <p class="mb-0"><strong>{{movement.detail}}</strong></p>
                                     </div>
                                 </div>
                             </div>
@@ -101,37 +101,3 @@
         </div>
     </div>
 </div>
-
-<!--
-<div class="modal fade" id="movementDetailModal" tabindex="-1" role="dialog" aria-labelledby="movementDetailModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
-      <div class="modal-content bg-dark">
-        <div class="modal-header">
-          <h5 class="modal-title" id="movementDetailModalLabel">Detalles del Movimiento</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <div class="card">
-                <div class="card-header bg-custom-dark-over-dark">
-                    <h5 class="card-title">Movimiento Nro: <span id="detail-id"></span></h5>
-                </div>
-                <div class="card-body bg-custom-dark-over-dark">
-                    <p><strong>Dispositivo:</strong> <span id="detail-device"></span></p>
-                    <p><strong>Oficina:</strong> <span id="detail-office"></span></p>
-                    <p><strong>Usuario:</strong> <span id="detail-employee"></span></p>
-                    <p><strong>Técnico:</strong> <span id="detail-techs"></span></p>
-                    <p><strong>Fecha:</strong> <span id="detail-date"></span></p>
-                    <p><strong>Insumo Utilizado:</strong> <span id="detail-suply"></span></p>
-                    <p><strong>Movimiento:</strong> <span id="detail-move"></span></p>
-                    <p><strong>Detalle del Movimiento:</strong> <span id="detail-detail"></span></p>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
