--- a/core/sh/templates/dependency/list.html
+++ b/core/sh/templates/dependency/list.html
@@ -9,7 +9,7 @@
 {% block columns %}
 
   <th scope="col" style="width: 15%;">Provincia</th>
-  <th scope="col" style="width: 20%;">Loacalidad</th>
+  <th scope="col" style="width: 20%;">Localidad</th>
   <th scope="col" style="width: 30%;">Dependencia</th>
   <th scope="col" style="width: 10%;">Opciones</th>
 
