--- a/core/sh/templates/dev_model/create.html
+++ b/core/sh/templates/dev_model/create.html
@@ -12,60 +12,61 @@
 {% block form %}
 
 <div class="form-group">
-  <label for="id_dev_type">Tipo de Dispositivo: </label> <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="dev_type_popup_add"><i class="fas fa-plus"></i></button>
-  {{form.dev_type}}
-  {% if form.dev_type.errors %}
-    <div class="invalid-feedback d-block">
-      {{form.dev_type.errors|join:"<br>"}}
-    </div>
-  {% endif %}
+    <label for="id_dev_type">Tipo de Dispositivo: </label> <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="dev_type_popup_add"><i class="fas fa-plus"></i></button>
+    {{form.dev_type}}
+    {% if form.dev_type.errors %}
+        <div class="invalid-feedback d-block">
+            {{form.dev_type.errors|join:"<br>"}}
+        </div>
+    {% endif %}
 </div>
 
 <div class="form-group">
-  <label for="id_brand">Marca: </label> <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="brand_popup_add"><i class="fas fa-plus"></i></button>
-  {{form.brand}}
-  {% if form.brand.errors %}
-    <div class="invalid-feedback d-block">
-      {{form.brand.errors|join:"<br>"}}
-    </div>
-  {% endif %}
+    <label for="id_brand">Marca: </label> <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="brand_popup_add"><i class="fas fa-plus"></i></button>
+    {{form.brand}}
+    {% if form.brand.errors %}
+        <div class="invalid-feedback d-block">
+            {{form.brand.errors|join:"<br>"}}
+        </div>
+    {% endif %}
 </div>
 
 <div class="form-group">
-  <label for="id_dev_model">Modelo de Dispositivo: </label>
-  {{form.dev_model}}
-  {% if form.dev_model.errors %}
-    <div class="invalid-feedback d-block">
-      {{form.dev_model.errors|join:"<br>"}}
-    </div>
-  {% endif %}
+    <label for="id_dev_model">Modelo de Dispositivo: </label>
+    {{form.dev_model}}
+    {% if form.dev_model.errors %}
+        <div class="invalid-feedback d-block">
+            {{form.dev_model.errors|join:"<br>"}}
+        </div>
+    {% endif %}
 </div>
 
 <div class="form-group">
-  <label for="id_image">Imagen: </label>
-  <div>
-    {{form.image}}
-    <button type="button" class="btn {{btn_color}}" id="custom_file_button">
-      <i class="fas fa-upload"></i> Seleccionar Archivo
-    </button>
-    <span id="file_name" class="ml-2">Ningún archivo seleccionado</span>
-  </div>
-  {% if form.image.help_text%}
-    <small class="form-text text-muted">{{form.image.help_text}}</small>
-  {% endif %}
-  {% if form.image.errors %}
-    <div class="invalid-feedback d-block">
-      {{form.image.errors|join:"<br>"}}
+    <label for="id_image">Imagen: </label>
+    <div>
+        {{form.image}}
+        <button type="button" class="btn {{btn_color}}" id="custom_file_button">
+            <i class="fas fa-upload"></i> Seleccionar Archivo
+        </button>
+        <span id="file_name" class="ml-2">Ningún archivo seleccionado</span>
     </div>
-  {% endif %}
+    {% if form.image.help_text %}
+        <small class="form-text text-muted">{{form.image.help_text}}</small>
+    {% endif %}
+    {% if form.image.errors %}
+        <div class="invalid-feedback d-block">
+            {{form.image.errors|join:"<br>"}}
+        </div>
+    {% endif %}
 </div>
 
 {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'dev_model/js/form.js' %}"></script>
-  <script>
-    let brandAddUrl = "{% url 'sh:brand_add' %}";
-    let dev_typeAddUrl = "{% url 'sh:dev_type_add' %}";
-  </script>
+    <script src="{% static 'dev_model/js/form.js' %}"></script>
+    <script src="{% static 'js/filters.js' %}"></script>
+    <script>
+        let brandAddUrl = "{% url 'sh:brand_add' %}";
+        let dev_typeAddUrl = "{% url 'sh:dev_type_add' %}";
+    </script>
 {% endblock form_scripts %}
