--- a/core/sh/templates/employee/create.html
+++ b/core/sh/templates/employee/create.html
@@ -93,6 +93,7 @@
             </div>
         </div>
     </div>
+
     <div class="card">
         <div class="card-header d-flex justify-content-between align-items-center {{bg_color}} ">
             <h3 class="card-title">Ingrese los Datos del Empleado</h3>
@@ -146,31 +147,56 @@
                 </div>
                 {% endif %}
             </div>
+
             <div class="form-group">
                 <label for="id_avatar_image_input">Imagen del Empleado:</label>
-                {{ form.avatar }}
-                <button type="button" class="btn btn-primary" id="custom_avatar_button">
-                    <i class="fas fa-upload"></i> Seleccionar Imagen
-                </button>
-                <span id="avatar_name" class="ml-2">Ningún archivo seleccionado</span>
+                <div>
+                    {{ form.avatar }}
+                    <button type="button" class="btn {{btn_color}}" id="custom_avatar_button">
+                        <i class="fas fa-upload"></i> Seleccionar Imagen
+                    </button>
+                    <span id="avatar_name" class="ml-2">Ningún archivo seleccionado</span>
+                </div>
+
+                {% if form.avatar.help_text %}
+                    <small class="form-text text-muted">{{form.avatar.help_text}}</small>
+                {% endif %}
                 {% if form.avatar.errors %}
+                    <div class="invalid-feedback d-block">
+                        {{ form.avatar.errors|join:"<br>" }}
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header d-flex justify-content-between align-items-center {{bg_color}} ">
+            <h3 class="card-title">Ingrese Detalles del Empleado</h3>
+        </div>
+        <div class="card-body">
+            <div class="form-group">
+                <label for="id_notes_input">Observaciónes del Empleado: </label>
+                {{ form.notes }}
+                {% if form.notes.errors %}
                 <div class="invalid-feedback d-block">
-                    {{ form.avatar.errors|join:"<br>" }}
+                    {{ form.notes.errors|join:"<br>" }}
                 </div>
                 {% endif %}
             </div>
         </div>
     </div>
+
 </div>
 
 {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'employee/js/form.js' %}"></script>
-  <script src="{% static 'js/filters.js' %}"></script>
+    <script src="{% static 'employee/js/form.js' %}"></script>
+    <script src="{% static 'js/filters.js' %}"></script>
 
-  <script>
-    let officeAddUrl = "{% url 'sh:office_add' %}";
-    let employee_statusAddUrl = "{% url 'sh:employee_status_add' %}";
-  </script>
+    <script>
+        let officeAddUrl = "{% url 'sh:office_add' %}";
+        let employee_statusAddUrl = "{% url 'sh:employee_status_add' %}";
+    </script>
 {% endblock form_scripts %}
