switch_ports in switch

--- a/core/sh/templates/switch/create.html
+++ b/core/sh/templates/switch/create.html
@@ -182,7 +182,7 @@
                                         {% endif %}
                                     </div>
                                     <div class="form-group col-6">
-                                        <label for="id_ip">Posición en el Rack:</label>
+                                        <label for="id_switch_rack_pos_input">Posición en el Rack:</label>
                                         {{ form.switch_rack_pos }}
                                         {% if form.switch_rack_pos.errors %}
                                         <div class="invalid-feedback d-block">
