network details in progress

--- a/core/sh/templates/device/modal_details.html
+++ b/core/sh/templates/device/modal_details.html
@@ -77,15 +77,41 @@
                                     <div class="card-header bg-custom-primary">
                                         <i class="fas fa-plug"></i> Conexiones
                                     </div>
+                                    {% if  device.wall_port_in%}
                                     <div class="card-body">
-                                        <p class="mb-2">
-                                            <strong>Boca de Pared:</strong>
-                                            {% if device.wall_port_in %}
-                                                {{ device.wall_port_in.wall_port }}
-                                            {% else %}
-                                                No conectado a boca de pared
-                                            {% endif %}
+                                        <p class="mb-2 text-center">
+                                            <strong><i class="fa-solid fa-ethernet"> </i> Boca de Pared:</strong>
+                                            {{ device.wall_port_in }}
                                         </p>
+                                        <p class="mb-2 text-center">
+                                            <i class="fas fa-arrow-down"></i>
+                                        </p>
+
+                                        {% if device.wall_port_in.switch_port_in %}
+
+                                        <p class="mb-2 text-center">
+                                            <strong><i class="fa-solid fa-server"> </i>Puerto del Switch:</strong>
+                                            {{ device.wall_port_in.switch_port_in.port_id }}
+                                        </p>
+                                        <p class="mb-2 text-center">
+                                            <i class="fas fa-arrow-down"></i>
+                                        </p>
+                                        <p class="mb-2 text-center">
+                                            <strong><i class="fa-solid fa-server"> </i>Del Switch:</strong>
+                                            {{ device.wall_port_in.switch_port_in.switch }}
+                                        </p>
+                                        <p class="mb-2 text-center">
+                                            <i class="fas fa-arrow-down"></i>
+                                        </p>
+                                        <p class="mb-2 text-center">
+                                            <strong><i class="fa-solid fa-server"> </i>Switch: </strong>
+                                            {{device.switch_port_in.switch.model.brand}} DE {{device.switch_port_in.switch.ports_q}} BOCAS
+                                        </p>
+
+                                        {% endif %}
+                                    </div>
+                                    {% elif device.switch_port_in %}
+                                    <div class="card-body">
                                         <p class="mb-2">
                                             <strong>Puerto de Switch:</strong>
                                             {% if device.switch_port_in %}
@@ -98,6 +124,9 @@
                                                 No se conecta a Switch
                                             {% endif %}
                                         </p>
+                                    </div>
+                                    {% elif device.patch_port_in%}
+                                    <div class="card-body"></div>
                                         <p class="mb-2">
                                             <strong>Puerto de Patchera:</strong>
                                             {% if device.patch_port_in %}
@@ -107,6 +136,13 @@
                                             {% endif %}
                                         </p>
                                     </div>
+                                    {% elif not device.patch_port_in or not switch_port_in or not wall_port_in %}
+                                    <div class="card-body">
+                                        <p class="mb-2 text-center">
+                                            <strong>Dispositivo sin conexion a la Red</strong>
+                                        </p>
+                                    </div>
+                                    {% endif %}
                                 </div>
                             </div>
 
