--- a/core/sh/templates/device/create.html
+++ b/core/sh/templates/device/create.html
@@ -231,21 +231,19 @@
 <div class="container mt4">
     <div class="card">
         <div class="card-header d-flex justify-content-between align-items-center {{bg_color}} ">
-            <h3 class="card-title">Seleccione el puerto desde el cual, el dispositivo, se conecta a la red</h3>
+            <h3 class="card-title">Seleccione el Puerto desde el cual ingresa la señal al switch</h3>
         </div>
         <div class="card-body">
-            <button id="toggle-ports-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros <i class="fa fa-filter"></i></button>
+            <button id="toggle-ports-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para puertos <i class="fas fa-search"></i></button>
             <div id="filter-port-cards" class="d-none">
                 <div class="row">
                     <div class="container">
                         <div class="card text-white bg-secondary my-1">
-
                             <div class="card-header">
                                 Filtrar por Conexión
                             </div>
-
                             <div class="card-body row">
-                                <div class="form-group col-6">
+                                <div class="form-group col-12">
                                     <label for="id_edifice_ports">Edificio</label>
                                     {{ form.edifice_ports }}
                                     {% if form.edifice_ports.errors %}
@@ -254,8 +252,7 @@
                                     </div>
                                     {% endif %}
                                 </div>
-
-                                <div class="form-group col-6">
+                                <div class="form-group col-12">
                                     <label for="id_loc_ports">Ubicación de Oficina:</label>
                                     {{ form.loc_ports }}
                                     {% if form.loc_ports.errors %}
@@ -264,87 +261,84 @@
                                     </div>
                                     {% endif %}
                                 </div>
-
-                                <div class="form-group col-12">
-                                    <label for="id_office_ports">Oficina:</label>
-                                    {{ form.office_ports }}
-                                    {% if form.office_ports.errors %}
-                                    <div class="invalid-feedback d-block">
-                                        {{ form.office_ports.errors|join:"<br>" }}
-                                    </div>
-                                    {% endif %}
-                                </div>
-
-                                <div class="form-group col-12">
-                                    <label for="id_rack_ports">Rack:</label>
-                                    {{ form.rack_ports }}
-                                    {% if form.rack_ports.errors %}
-                                    <div class="invalid-feedback d-block">
-                                        {{ form.rack_ports.errors|join:"<br>" }}
-                                    </div>
-                                    {% endif %}
-                                </div>
-
-                                <div class="form-group col-6">
-                                    <label for="id_patchera_ports">Patchera de Ingreso:</label>
-                                    {{ form.patchera_ports }}
-                                    {% if form.patchera_ports.errors %}
-                                    <div class="invalid-feedback d-block">
-                                        {{ form.patchera_ports.errors|join:"<br>" }}
-                                    </div>
-                                    {% endif %}
-                                </div>
-
-                                <div class="form-group col-6">
-                                    <label for="id_switch_ports">Switch de Ingreso:</label>
-                                    {{ form.switch_ports }}
-                                    {% if form.switch_ports.errors %}
-                                    <div class="invalid-feedback d-block">
-                                        {{ form.switch_ports.errors|join:"<br>" }}
-                                    </div>
-                                    {% endif %}
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div class="form-group">
-                <label for="id_wall_port_in">Boca de Pared:</label>
-                <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="wall_port_popup_add"><i class="fas fa-plus"></i></button>
-                {{ form.wall_port_in }}
-                {% if form.wall_port_in.errors %}
-                <div class="invalid-feedback d-block">
-                    {{ form.wall_port_in.errors|join:"<br>" }}
+            <div class="row">
+                <div class="form-group col-6">
+                    <label for="id_office_ports">Oficina:</label>
+                    {{ form.office_ports }}
+                    {% if form.office_ports.errors %}
+                    <div class="invalid-feedback d-block">
+                        {{ form.office_ports.errors|join:"<br>" }}
+                    </div>
+                    {% endif %}
                 </div>
-                {% endif %}
-            </div>
-
-            <div class="form-group">
-                <label for="id_switch_port_in">Puerto Switch:</label>
-                <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="switch_port_popup_add"><i class="fas fa-plus"></i></button>
-                {{ form.switch_port_in }}
-                {% if form.switch_port_in.errors %}
-                <div class="invalid-feedback d-block">
-                    {{ form.switch_port_in.errors|join:"<br>" }}
+                <div class="form-group col-6">
+                    <label for="id_rack_ports">Rack:</label>
+                    {{ form.rack_ports }}
+                    {% if form.rack_ports.errors %}
+                    <div class="invalid-feedback d-block">
+                        {{ form.rack_ports.errors|join:"<br>" }}
+                    </div>
+                    {% endif %}
                 </div>
-                {% endif %}
-            </div>
-
-            <div class="form-group">
-                <label for="id_patch_port_in">Puerto Patchera:</label>
-                <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="patch_port_popup_add"><i class="fas fa-plus"></i></button>
-                {{ form.patch_port_in }}
-                {% if form.patch_port_in.errors %}
-                <div class="invalid-feedback d-block">
-                    {{ form.patch_port_in.errors|join:"<br>" }}
+                <div class="form-group col-12">
+                    <label for="id_wall_port_in">Boca de Pared de Ingreso:</label>
+                    <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="wall_port_popup_add"><i class="fas fa-plus"></i></button>
+                    {{ form.wall_port_in }}
+                    {% if form.wall_port_in.errors %}
+                    <div class="invalid-feedback d-block">
+                        {{ form.wall_port_in.errors|join:"<br>" }}
+                    </div>
+                    {% endif %}
                 </div>
-                {% endif %}
+                <div class="form-group col-6">
+                    <label for="id_switch_ports">Switch de Ingreso:</label>
+                    {{ form.switch_ports }}
+                    {% if form.switch_ports.errors %}
+                    <div class="invalid-feedback d-block">
+                        {{ form.switch_ports.errors|join:"<br>" }}
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="form-group col-6">
+                    <label for="id_switch_port_in">Puerto del Switch de Ingreso:</label>
+                        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="switch_port_popup_add"><i class="fas fa-plus"></i></button>
+                        {{ form.switch_port_in }}
+                        {% if form.switch_port_in.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ form.switch_port_in.errors|join:"<br>" }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group col-6">
+                        <label for="id_patchera">Patchera de Ingreso:</label>
+                        {{ form.patchera_ports }}
+                        {% if form.patchera_ports.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ form.patchera_ports.errors|join:"<br>" }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group col-6">
+                        <label for="id_patch_port_in">Puerto de la Patchera de Ingreso:</label>
+                        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="patch_port_popup_add"><i class="fas fa-plus"></i></button>
+                        {{ form.patch_port_in }}
+                        {% if form.patch_port_in.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ form.patch_port_in.errors|join:"<br>" }}
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 
 
 {% endblock form %}
