--- a/core/sh/templates/switch/list.html
+++ b/core/sh/templates/switch/list.html
@@ -11,9 +11,8 @@
 
   <th scope="col" style="width: 10%;">Marca</th>
   <th scope="col" style="width: 10%;">Modelo</th>
-  <th scope="col" style="width: 10%;">Nro. de Serie</th>
   <th scope="col" style="width: 5%;">Cantidad de puertos</th>
-  <th scope="col" style="width: 15%;">Dirección IP</th>
+  <th scope="col" style="width: 25%;">Recibe señal desde</th>
   <th scope="col" style="width: 10%;">Oficina</th>
   <th scope="col" style="width: 15%;">Rack</th>
   <th scope="col" style="width: 10%;">Posicion en el Rack</th>
