working on fonts_Switch filters

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -225,6 +225,12 @@
               </a>
             </li>
             <li class="nav-item">
+              <a href="{% url 'sh:switch_font_list' %}" class="nav-link">
+                <i class="fa-solid fa-car-battery"></i>
+                <p>Fuentes de Switchs</p>
+              </a>
+            </li>
+            <li class="nav-item">
               <a href="{% url 'sh:suply_list' %}" class="nav-link">
                 <i class="fa-solid fa-boxes-stacked"></i>
                 <p>Insumos</p>
