--- a/core/sh/templates/switch_font/list.html
+++ b/core/sh/templates/switch_font/list.html
@@ -10,11 +10,12 @@
 {% block columns %}
 
     <th scope="col" style="width: 5%;">Fuente</th>
-    <th scope="col" style="width: 20%;">Instalada en el Switch</th>
+    <th scope="col" style="width: 15%;">Instalada en el Switch</th>
     <th scope="col" style="width: 10%;">Rack:</th>
     <th scope="col" style="width: 15%;">Estado</th>
     <th scope="col" style="width: 15%;">Último Envio</th>
-    <th scope="col" style="width: 20%;">Último Recepeción</th>
+    <th scope="col" style="width: 15%;">Último Recepeción</th>
+    <th scope="col" style="width: 15%;">Observaciones</th>
     <th scope="col" style="width: 10%;">Opciones</th>
 
 {% endblock columns %}
