--- a/core/sh/templates/switch_font/create.html
+++ b/core/sh/templates/switch_font/create.html
@@ -5,7 +5,7 @@
 <!-- Select2 -->
 <link rel="stylesheet" href="{% static 'lib/select2_4.1.0/dist/css/select2.min.css' %}">
 <link rel="stylesheet" href="{% static 'lib/select2_4.1.0/dist/css/select2-bootstrap.min.css' %}">
-<script src="{% static 'lib/select2_4.1.0/dist/js/select2.full.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'lib/bootstrap-datepicker-1.9.0-dist/css/bootstrap-datepicker.min.css'%}">
 <link rel="stylesheet" href="{% static 'css/select2_dark.css' %}">
 
 <script src="{% static 'lib/select2_4.1.0/dist/js/select2.full.min.js' %}"></script>
@@ -50,32 +50,44 @@
                         {% endif %}
                     </div>
                     <div class="form-group col-6 p-2">
-                        <label for="id_send_date">Fecha de Envio: </label>
+                        <label for="id_send_date">Fecha de Envío: </label>
                         <div class="row col-12">
-                          <button type="button" id="id_send_date" class="btn btn-dark mx-3">
-                            <i class="fa fa-calendar"></i> Seleccionar Fecha:
-                          </button>
-                          <input type="text" name="send_date" id="id_send_date" readonly value="{{ form.send_date.value | default_if_none:'' }}" class="form-control col-3">
-                          {% if form.send_date.errors %}
-                            <div class="invalid-feedback d-block">
-                              {{ form.send_date.errors|join:"<br>" }}
-                            </div>
-                            {% endif %}
+                            <button type="button" id="id_send_date_button" class="btn mx-3 {{ btn_color }}">
+                                <i class="fa fa-calendar"></i> Seleccionar Fecha
+                            </button>
+                            <input type="text" id="id_send_date_display" readonly class="form-control col-3" placeholder="Seleccione una fecha" value="{{ form.send_date.value|date:'d/m/Y' }}">
+                            <input type="hidden" name="send_date" id="id_send_date" value="{{ form.send_date.value|date:'d/m/Y' }}">
                         </div>
+                        {% if form.send_date.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ form.send_date.errors|join:"<br>" }}
+                        </div>
+                        {% endif %}
                     </div>
+
                     <div class="form-group col-6 p-2">
-                        <label for="id_reception_date">Fecha de Recepcion: </label>
+                        <label for="id_reception_date">Fecha de Recepción: </label>
                         <div class="row col-12">
-                          <button type="button" id="id_reception_date" class="btn btn-dark mx-3">
-                            <i class="fa fa-calendar"></i> Seleccionar Fecha:
-                          </button>
-                          <input type="text" name="reception_date" id="id_reception_date" readonly value="{{ form.reception_date.value | default_if_none:'' }}" class="form-control col-3">
-                          {% if form.reception_date.errors %}
-                            <div class="invalid-feedback d-block">
-                              {{ form.reception_date.errors|join:"<br>" }}
-                            </div>
-                            {% endif %}
+                            <button type="button" id="id_reception_date_button" class="btn mx-3 {{ btn_color }}">
+                                <i class="fa fa-calendar"></i> Seleccionar Fecha
+                            </button>
+                            <input type="text" id="id_reception_date_display" readonly class="form-control col-3" placeholder="Seleccione una fecha" value="{{ form.reception_date.value|date:'d/m/Y' }}">
+                            <input type="hidden" name="reception_date" id="id_reception_date" value="{{ form.reception_date.value|date:'d/m/Y' }}">
                         </div>
+                        {% if form.reception_date.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ form.reception_date.errors|join:"<br>" }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group col-12">
+                        <label for="id_obs">Oservaciones:</label>
+                        {{ form.obs }}
+                        {% if form.obs.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ form.obs.errors|join:"<br>" }}
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -85,4 +97,9 @@
 {% endblock form %}
 
 {% block form_scripts %}
+  <script src="{% static 'js/filters.js' %}"></script>
+  <script src="{% static 'switch_font/js/form.js' %}"></script>
+  <script>
+    let switchAddUrl = "{% url 'sh:switch_add' %}";
+  </script>
 {% endblock form_scripts %}
